--- a/InteractiveMap/Client/package.json
+++ b/InteractiveMap/Client/package.json
@@ -35,7 +35,7 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^4.7.2",
-    "@types/yandex-maps": "^2.1.21"
+    "@types/yandex-maps": "^2.1.21",
+    "typescript": "^4.7.2"
   }
 }
