add db, separate identity context

--- a/InteractiveMap/appsettings.json
+++ b/InteractiveMap/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DbConnection": "Data Source=InteractiveMap.db"
+    "DbConnection": "Data Source=Map.db",
+    "IdentityDbConnection": "Data Source=Identity.db"
   },
   "Logging": {
     "LogLevel": {
