--- a/InteractiveMap/appsettings.Development.json
+++ b/InteractiveMap/appsettings.Development.json
@@ -1,8 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DbConnection": "Data Source=Map.db",
+    "IdentityDbConnection": "Data Source=Identity.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
