--- a/InteractiveMap/Client/package.json
+++ b/InteractiveMap/Client/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-redux": "^7.1.24",
     "antd": "^4.19.5",
+    "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.30.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-yandex-maps": "^4.6.0",
