fix db, remove mark image service

--- a/InteractiveMap.Application/InteractiveMap.Application.csproj
+++ b/InteractiveMap.Application/InteractiveMap.Application.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\InteractiveMap.Core\InteractiveMap.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\Mappings\" />
+  </ItemGroup>
+
 </Project>
