--- a/InteractiveMap/Client/package.json
+++ b/InteractiveMap/Client/package.json
@@ -5,9 +5,6 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.2",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
     "@types/react-redux": "^7.1.24",
     "antd": "^4.19.5",
     "axios": "^0.27.2",
@@ -17,6 +14,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-use-cookie": "^1.4.0",
     "react-yandex-maps": "^4.6.0",
     "web-vitals": "^2.1.4"
   },
@@ -39,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^17.0.2",
     "@types/yandex-maps": "^2.1.21",
     "typescript": "^4.7.2"
   }
